Stack Editor bales no longer stretch when big items are selected. Items are size appropiately on the product list and the Container Overview

--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,7 @@ input::-webkit-inner-spin-button {
 	animation-duration: 1s;
 	animation-iteration-count: infinite;
 	animation-direction: alternate-reverse;
+	width: max-content;
 }
 
 @keyframes stack--selected {
@@ -469,6 +470,7 @@ MuiAppBar {
 
 .stack-editor__bale {
 	border: solid;
+	overflow: hidden;
 }
 
 .stack-editor__bale--selected {
